Small layout fix for the right-aligned nav

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -47,7 +47,7 @@ $header-nav-link-color-hover: $blue;
     position: relative;
     display: inline-block;
     line-height: 2.5em;
-    margin-right: 0.5em;
+    margin-left: 0.5em;
   }
 }
 
